--- a/result/Lenskit.ipynb
+++ b/result/Lenskit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "naval-chapel",
    "metadata": {},
    "outputs": [
@@ -11,30 +11,27 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: lenskit in c:\\users\\yun\\anaconda3\\lib\\site-packages (0.14.1)\n",
+      "Requirement already satisfied: pandas==1.*,>=1.0 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (1.2.4)\n",
+      "Requirement already satisfied: csr>=0.3.1 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (0.4.1)\n",
       "Requirement already satisfied: scipy>=1.2 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (1.7.1)\n",
+      "Requirement already satisfied: cffi>=1.12.2 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (1.14.5)\n",
+      "Requirement already satisfied: psutil>=5 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (5.8.0)\n",
+      "Requirement already satisfied: binpickle>=0.3.2 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (0.3.4)\n",
+      "Requirement already satisfied: seedbank>=0.1.0 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (0.1.2)\n",
       "Requirement already satisfied: numba<0.56,>=0.51 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (0.53.1)\n",
       "Requirement already satisfied: numpy>=1.17 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (1.20.1)\n",
-      "Requirement already satisfied: binpickle>=0.3.2 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (0.3.4)\n",
-      "Requirement already satisfied: cffi>=1.12.2 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (1.14.5)\n",
-      "Requirement already satisfied: seedbank>=0.1.0 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (0.1.2)\n",
-      "Requirement already satisfied: psutil>=5 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (5.8.0)\n",
-      "Requirement already satisfied: csr>=0.3.1 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (0.4.1)\n",
-      "Requirement already satisfied: pandas==1.*,>=1.0 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from lenskit) (1.2.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from pandas==1.*,>=1.0->lenskit) (2.8.1)\n",
       "Requirement already satisfied: pytz>=2017.3 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from pandas==1.*,>=1.0->lenskit) (2021.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from pandas==1.*,>=1.0->lenskit) (2.8.1)\n",
       "Requirement already satisfied: msgpack>=1.0 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from binpickle>=0.3.2->lenskit) (1.0.2)\n",
       "Requirement already satisfied: pycparser in c:\\users\\yun\\anaconda3\\lib\\site-packages (from cffi>=1.12.2->lenskit) (2.20)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\yun\\anaconda3\\lib\\site-packages (from numba<0.56,>=0.51->lenskit) (52.0.0.post20210125)\n",
       "Requirement already satisfied: llvmlite<0.37,>=0.36.0rc1 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from numba<0.56,>=0.51->lenskit) (0.36.0)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\yun\\anaconda3\\lib\\site-packages (from numba<0.56,>=0.51->lenskit) (52.0.0.post20210125)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7.3->pandas==1.*,>=1.0->lenskit) (1.15.0)\n",
       "Requirement already satisfied: anyconfig in c:\\users\\yun\\anaconda3\\lib\\site-packages (from seedbank>=0.1.0->lenskit) (0.13.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Collecting pyarrowNote: you may need to restart the kernel to use updated packages.\n",
-      "  Downloading pyarrow-8.0.0-cp38-cp38-win_amd64.whl (17.9 MB)\n",
+      "Requirement already satisfied: pyarrow in c:\\users\\yun\\anaconda3\\lib\\site-packages (8.0.0)\n",
       "Requirement already satisfied: numpy>=1.16.6 in c:\\users\\yun\\anaconda3\\lib\\site-packages (from pyarrow) (1.20.1)\n",
-      "Installing collected packages: pyarrow\n",
-      "Successfully installed pyarrow-8.0.0\n",
-      "\n"
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -45,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "academic-prescription",
    "metadata": {},
    "outputs": [],
@@ -59,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "handled-vegetable",
    "metadata": {},
    "outputs": [],
@@ -69,14 +66,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "enhanced-sunset",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'train_combined_large_set.parquet'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-f6f301c79fce>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# ratings = pd.read_csv('/scratch/work/courses/DSGA1004-2021/movielens/ml-latest-small/ratings.csv')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mratings_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_parquet\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'train_combined_large_set.parquet'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mratings_val\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_parquet\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'val_large_set.parquet'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\parquet.py\u001b[0m in \u001b[0;36mread_parquet\u001b[1;34m(path, engine, columns, use_nullable_dtypes, **kwargs)\u001b[0m\n\u001b[0;32m    457\u001b[0m     \"\"\"\n\u001b[0;32m    458\u001b[0m     \u001b[0mimpl\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 459\u001b[1;33m     return impl.read(\n\u001b[0m\u001b[0;32m    460\u001b[0m         \u001b[0mpath\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muse_nullable_dtypes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0muse_nullable_dtypes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    461\u001b[0m     )\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\parquet.py\u001b[0m in \u001b[0;36mread\u001b[1;34m(self, path, columns, use_nullable_dtypes, storage_options, **kwargs)\u001b[0m\n\u001b[0;32m    212\u001b[0m                 )\n\u001b[0;32m    213\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 214\u001b[1;33m         path_or_handle, handles, kwargs[\"filesystem\"] = _get_path_or_handle(\n\u001b[0m\u001b[0;32m    215\u001b[0m             \u001b[0mpath\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    216\u001b[0m             \u001b[0mkwargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"filesystem\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\parquet.py\u001b[0m in \u001b[0;36m_get_path_or_handle\u001b[1;34m(path, fs, storage_options, mode, is_dir)\u001b[0m\n\u001b[0;32m     80\u001b[0m         \u001b[1;31m# fsspec resources can also point to directories\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     81\u001b[0m         \u001b[1;31m# this branch is used for example when reading from non-fsspec URLs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 82\u001b[1;33m         \u001b[0mhandles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_handle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath_or_handle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mis_text\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     83\u001b[0m         \u001b[0mfs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     84\u001b[0m         \u001b[0mpath_or_handle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhandles\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhandle\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\common.py\u001b[0m in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    649\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    650\u001b[0m             \u001b[1;31m# Binary mode\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 651\u001b[1;33m             \u001b[0mhandle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mioargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    652\u001b[0m         \u001b[0mhandles\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    653\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'train_combined_large_set.parquet'"
+     ]
+    }
+   ],
    "source": [
     "# ratings = pd.read_csv('/scratch/work/courses/DSGA1004-2021/movielens/ml-latest-small/ratings.csv')\n",
-    "ratings_train = pd.read_parquet('train_combined_small_set.parquet')\n",
-    "ratings_val = pd.read_parquet('val_small_set.parquet')"
+    "ratings_train = pd.read_parquet('train_combined_large_set.parquet')\n",
+    "ratings_val = pd.read_parquet('val_large_set.parquet')"
    ]
   },
   {
